--- a/style.css
+++ b/style.css
@@ -10,12 +10,173 @@ body {
     font-family: 'Montserrat', sans-serif;
 }
 
+main {
+    margin: 2rem 0 6rem 0;
+}
+
 img {
     max-width: 100%;
 }
 
 .container {
-    width: 80%;
+    width: 90%;
     max-width: 1100px;
     margin: 0 auto;
+}
+
+label {
+    display: block;
+}
+
+input {
+    width: 100%;
+    padding: .7rem;
+    margin: .5rem 0 .9rem 0;
+    border: 1px solid #828282;
+    border-radius: .5rem;
+}
+
+.header {
+    padding: 1rem ;
+    margin-left: 3.5rem;
+    
+}
+
+.card {
+    background: #F2F2F2;
+    padding: 1rem;
+    border-radius: 0.7rem;
+    
+}
+
+.flex {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+}
+
+.product {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+}
+
+.product-img {
+    width: 35%;
+    border-radius: 1rem;
+}
+
+.quantity {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    padding: .8rem;
+    margin: 2rem 0 0 0;
+    border: 1px solid var(--gray-3, #828282);
+    border-radius: .5rem;    
+}
+
+.minus,
+.plus {
+    padding: .1rem .3rem;
+    background-color: #a09f9f;
+}
+
+.price {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    margin: .2rem 0;
+}
+
+.line {
+    text-decoration: line-through;   
+}
+
+.orange {
+    font-weight: 600;
+    color: #F2994A;
+}
+
+.sub {
+    margin-top: 3rem;
+}
+
+.shipping-fee,
+.total {
+    border-bottom: 1px solid #a09f9f;
+    line-height: 2rem;
+    display: flex;
+    justify-content: space-between;
+}
+
+.form-flex {
+    display: flex;
+    justify-content: space-between;
+    gap: 1rem;
+    width: 100%;
+}
+
+input[type="checkbox"] {
+    width: 10%;
+}
+
+.shipping-address,
+.contact-info {
+    margin-top: 2rem;
+    margin-bottom: .5rem;
+}
+
+input[type="button"] {
+    width: 40%;
+    margin-left: 12rem;
+    padding: 1rem .5rem;
+
+    background-color: #F2994A;
+    color: #F2F2F2;
+    border: none;
+    border-radius: .5rem;
+}
+
+@media (min-width: 700px) {
+    .desktop {
+        width: 85%;
+        margin: 0 auto;
+
+
+        display: flex;
+        flex-direction: row-reverse;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+
+    label{
+        width: 90%;
+    }
+
+    .form {
+        width: 50%;
+    }
+
+    .card {
+        width: 40%;
+
+        .quantity {
+            margin-top: 2rem;
+        }
+    }
+
+    .form-flex {
+        display: flex;
+        justify-content: space-between;
+        gap: 1rem;
+        width: 90%;
+    }
+
+    input[type="button"] {
+        margin-left: 15rem;
+    
+    }
+    
 }
